R4NV/Bindings/C/r4nv.h

/* Generated by R4LContractGen. Do not edit. */
#ifndef R4NV_R4L_BINDING_H
#define R4NV_R4L_BINDING_H

#include <stddef.h>
#include <stdint.h>
#include <r4os/r4l.h>

typedef struct R4NvDeviceProfile {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t copy_class;
    uint32_t rm_release;
    uint32_t command_abi;
    uint32_t adapter_id;
    uint32_t flags;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4NvDeviceProfile;
_Static_assert(sizeof(R4NvDeviceProfile) == 48u, "R4NvDeviceProfile size mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, version) == 0u, "R4NvDeviceProfile.version offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, size) == 4u, "R4NvDeviceProfile.size offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, vendor_id) == 8u, "R4NvDeviceProfile.vendor_id offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, copy_class) == 12u, "R4NvDeviceProfile.copy_class offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, rm_release) == 16u, "R4NvDeviceProfile.rm_release offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, command_abi) == 20u, "R4NvDeviceProfile.command_abi offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, adapter_id) == 24u, "R4NvDeviceProfile.adapter_id offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, flags) == 28u, "R4NvDeviceProfile.flags offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, device_generation) == 32u, "R4NvDeviceProfile.device_generation offset mismatch");
_Static_assert(offsetof(R4NvDeviceProfile, reset_generation) == 40u, "R4NvDeviceProfile.reset_generation offset mismatch");

typedef struct R4NvFeatures {
    uint32_t version;
    uint32_t size;
    uint32_t command_abi;
    uint32_t features;
    uint32_t copy_class;
    uint32_t gpu_address_bits;
    uint32_t max_command_words;
    uint32_t reserved;
    uint64_t max_copy_bytes;
    uint64_t max_rows;
} R4NvFeatures;
_Static_assert(sizeof(R4NvFeatures) == 48u, "R4NvFeatures size mismatch");
_Static_assert(offsetof(R4NvFeatures, version) == 0u, "R4NvFeatures.version offset mismatch");
_Static_assert(offsetof(R4NvFeatures, size) == 4u, "R4NvFeatures.size offset mismatch");
_Static_assert(offsetof(R4NvFeatures, command_abi) == 8u, "R4NvFeatures.command_abi offset mismatch");
_Static_assert(offsetof(R4NvFeatures, features) == 12u, "R4NvFeatures.features offset mismatch");
_Static_assert(offsetof(R4NvFeatures, copy_class) == 16u, "R4NvFeatures.copy_class offset mismatch");
_Static_assert(offsetof(R4NvFeatures, gpu_address_bits) == 20u, "R4NvFeatures.gpu_address_bits offset mismatch");
_Static_assert(offsetof(R4NvFeatures, max_command_words) == 24u, "R4NvFeatures.max_command_words offset mismatch");
_Static_assert(offsetof(R4NvFeatures, reserved) == 28u, "R4NvFeatures.reserved offset mismatch");
_Static_assert(offsetof(R4NvFeatures, max_copy_bytes) == 32u, "R4NvFeatures.max_copy_bytes offset mismatch");
_Static_assert(offsetof(R4NvFeatures, max_rows) == 40u, "R4NvFeatures.max_rows offset mismatch");

typedef struct R4NvCopy {
    uint32_t version;
    uint32_t size;
    uint64_t source;
    uint64_t target;
    uint64_t bytes;
    uint64_t semaphore;
    uint32_t copy_class;
    uint32_t rows;
    uint32_t source_pitch;
    uint32_t target_pitch;
    uint32_t point;
    uint32_t flags;
} R4NvCopy;
_Static_assert(sizeof(R4NvCopy) == 64u, "R4NvCopy size mismatch");
_Static_assert(offsetof(R4NvCopy, version) == 0u, "R4NvCopy.version offset mismatch");
_Static_assert(offsetof(R4NvCopy, size) == 4u, "R4NvCopy.size offset mismatch");
_Static_assert(offsetof(R4NvCopy, source) == 8u, "R4NvCopy.source offset mismatch");
_Static_assert(offsetof(R4NvCopy, target) == 16u, "R4NvCopy.target offset mismatch");
_Static_assert(offsetof(R4NvCopy, bytes) == 24u, "R4NvCopy.bytes offset mismatch");
_Static_assert(offsetof(R4NvCopy, semaphore) == 32u, "R4NvCopy.semaphore offset mismatch");
_Static_assert(offsetof(R4NvCopy, copy_class) == 40u, "R4NvCopy.copy_class offset mismatch");
_Static_assert(offsetof(R4NvCopy, rows) == 44u, "R4NvCopy.rows offset mismatch");
_Static_assert(offsetof(R4NvCopy, source_pitch) == 48u, "R4NvCopy.source_pitch offset mismatch");
_Static_assert(offsetof(R4NvCopy, target_pitch) == 52u, "R4NvCopy.target_pitch offset mismatch");
_Static_assert(offsetof(R4NvCopy, point) == 56u, "R4NvCopy.point offset mismatch");
_Static_assert(offsetof(R4NvCopy, flags) == 60u, "R4NvCopy.flags offset mismatch");

typedef struct R4NvDriverProfile {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t copy_class;
    uint32_t rm_release;
    uint32_t command_abi;
    uint32_t reserved0;
    uint32_t reserved1;
} R4NvDriverProfile;
_Static_assert(sizeof(R4NvDriverProfile) == 32u, "R4NvDriverProfile size mismatch");
_Static_assert(offsetof(R4NvDriverProfile, version) == 0u, "R4NvDriverProfile.version offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, size) == 4u, "R4NvDriverProfile.size offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, vendor_id) == 8u, "R4NvDriverProfile.vendor_id offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, copy_class) == 12u, "R4NvDriverProfile.copy_class offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, rm_release) == 16u, "R4NvDriverProfile.rm_release offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, command_abi) == 20u, "R4NvDriverProfile.command_abi offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, reserved0) == 24u, "R4NvDriverProfile.reserved0 offset mismatch");
_Static_assert(offsetof(R4NvDriverProfile, reserved1) == 28u, "R4NvDriverProfile.reserved1 offset mismatch");

#define R4NV_COMMAND_ABI ((uint32_t)1)
#define R4NV_RM_RELEASE ((uint32_t)570144)
#define R4NV_FEATURE_COPY_LINEAR ((uint32_t)1)
#define R4NV_FEATURE_COPY_ROWS ((uint32_t)2)
#define R4NV_MAX_COMMAND_WORDS ((uint32_t)19)
#define R4NV_STATUS_OK ((int32_t)0)
#define R4NV_STATUS_INVALID ((int32_t)-1)
#define R4NV_STATUS_UNSUPPORTED ((int32_t)-2)
#define R4NV_STATUS_CAPACITY ((int32_t)-3)

#define R4NV_BACKEND_V1_EXPORT_NAME "BACKEND_V1"
#define R4NV_BACKEND_V1_ABI_MAJOR 1u
#define R4NV_BACKEND_V1_REVISION 1u
#define R4NV_BACKEND_V1_INTERFACE_ID_LO 0x52344e5642454e44ull
#define R4NV_BACKEND_V1_INTERFACE_ID_HI 0x52344f5330373931ull
#define R4NV_BACKEND_V1_TABLE_SIZE 48u
#define R4NV_BACKEND_V1_HEADER_INITIALIZER { R4L_INTERFACE_MAGIC, R4L_INTERFACE_HEADER_VERSION, 0u, R4NV_BACKEND_V1_TABLE_SIZE, R4NV_BACKEND_V1_ABI_MAJOR, R4NV_BACKEND_V1_REVISION, R4NV_BACKEND_V1_INTERFACE_ID_LO, R4NV_BACKEND_V1_INTERFACE_ID_HI }
typedef int32_t (*R4NvBackendV1NegotiateFn)(const R4NvDeviceProfile * profile, R4NvFeatures * output);
typedef int32_t (*R4NvBackendV1EncodeCopyFn)(const R4NvCopy * request, uint32_t * commands, uint32_t capacity, uint32_t * written);
typedef struct R4NvBackendV1 {
    R4LInterfaceHeader header;
    R4NvBackendV1NegotiateFn negotiate;
    R4NvBackendV1EncodeCopyFn encode_copy;
} R4NvBackendV1;
_Static_assert(sizeof(R4NvBackendV1) == 48u, "R4NvBackendV1 size mismatch");
_Static_assert(offsetof(R4NvBackendV1, negotiate) == 32u, "R4NvBackendV1.negotiate offset mismatch");
_Static_assert(offsetof(R4NvBackendV1, encode_copy) == 40u, "R4NvBackendV1.encode_copy offset mismatch");
typedef struct R4NvBackendV1Client { const R4LInterfaceHeader *header; } R4NvBackendV1Client;

static inline int32_t r4nv_backend_v1_init(const R4XStartContext *ctx, R4NvBackendV1Client *out_client) {
    if (out_client == 0) return R4L_BINDING_INVALID_EXPECTATION;
    out_client->header = 0;
    const R4XStartImport *item = r4xstart_find_import_named(ctx, "R4NV", "BACKEND_V1");
    const R4LInterfaceExpectation expected = { 0x52344e5642454e44ull, 0x52344f5330373931ull, 1u, 1u, 48u, 0u, 0u };
    const R4LInterfaceHeader *header = 0;
    int32_t status = r4l_validate_import(item, &expected, &header);
    if (status != R4L_BINDING_OK) return status;
    if (r4l_slot_address(header, 32u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    if (r4l_slot_address(header, 40u) == 0) return R4L_BINDING_TABLE_TOO_SMALL;
    out_client->header = header;
    return R4L_BINDING_OK;
}

static inline int32_t r4nv_negotiate(R4NvBackendV1Client *client, const R4NvDeviceProfile * profile, R4NvFeatures * output) {
    R4NvBackendV1NegotiateFn function = (R4NvBackendV1NegotiateFn)r4l_slot_address(client->header, 32u);
    return function(profile, output);
}

static inline int32_t r4nv_encode_copy(R4NvBackendV1Client *client, const R4NvCopy * request, uint32_t * commands, uint32_t capacity, uint32_t * written) {
    R4NvBackendV1EncodeCopyFn function = (R4NvBackendV1EncodeCopyFn)r4l_slot_address(client->header, 40u);
    return function(request, commands, capacity, written);
}

#endif