R4NV/Contract/Generated/implementation_abi.zig

// Generated by R4LContractGen. Do not edit.
const r4os = @import("r4os");

pub const InterfaceHeader = r4os.runtime_r4l.InterfaceHeader;

pub const module_name = "R4NV";

pub const R4NvDeviceProfile = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    copy_class: u32,
    rm_release: u32,
    command_abi: u32,
    adapter_id: u32,
    flags: u32,
    device_generation: u64,
    reset_generation: u64,
};

pub const R4NvFeatures = extern struct {
    version: u32,
    size: u32,
    command_abi: u32,
    features: u32,
    copy_class: u32,
    gpu_address_bits: u32,
    max_command_words: u32,
    reserved: u32,
    max_copy_bytes: u64,
    max_rows: u64,
};

pub const R4NvCopy = extern struct {
    version: u32,
    size: u32,
    source: u64,
    target: u64,
    bytes: u64,
    semaphore: u64,
    copy_class: u32,
    rows: u32,
    source_pitch: u32,
    target_pitch: u32,
    point: u32,
    flags: u32,
};

pub const R4NvDriverProfile = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    copy_class: u32,
    rm_release: u32,
    command_abi: u32,
    reserved0: u32,
    reserved1: u32,
};
pub const command_abi: u32 = 1;
pub const rm_release: u32 = 570144;
pub const feature_copy_linear: u32 = 1;
pub const feature_copy_rows: u32 = 2;
pub const max_command_words: u32 = 19;
pub const status_ok: i32 = 0;
pub const status_invalid: i32 = -1;
pub const status_unsupported: i32 = -2;
pub const status_capacity: i32 = -3;

pub const backend_v1_export_name = "BACKEND_V1";
pub const backend_v1_revision: u16 = 1;
pub const backend_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 48,
    .abi_major = 1,
    .abi_minor = 1,
    .interface_id_lo = 0x52344e5642454e44,
    .interface_id_hi = 0x52344f5330373931,
};
pub const BackendV1NegotiateFn = *const fn (profile: *const R4NvDeviceProfile, output: *R4NvFeatures) callconv(.c) i32;
pub const BackendV1EncodeCopyFn = *const fn (request: *const R4NvCopy, commands: [*]u32, capacity: u32, written: *u32) callconv(.c) i32;
pub const BackendV1 = extern struct {
    header: InterfaceHeader,
    negotiate: BackendV1NegotiateFn,
    encode_copy: BackendV1EncodeCopyFn,
};
